--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,6 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=../keystores/release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=release
